--- a/html_css/index.html
+++ b/html_css/index.html
@@ -9,14 +9,14 @@
 <body>
     <nav>
         <ul>
-            <li data-text="sun"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/sun.html" target="_blank">sun</a></li>
-            <li data-text="mercury"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/mercury.html" target="_blank">mercury</a></li>
-            <li data-text="venus"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/venus.html" target="_blank">venus</a></li>
-            <li data-text="earth"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/earth.html" target="_blank">earth</a></li>
-            <li data-text="jupiter"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/jupiter.html" target="_blank">jupiter</a></li>
-            <li data-text="saturn"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/saturn.html" target="_blank">saturn</a></li>
-            <li data-text="uranus"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/uranus.html" target="_blank">uranus</a></li>
-            <li data-text="neptune"><a href="file:///C:/Users/l/OneDrive/Desktop/project_abderrahmane_elkouah/nav/neptune.html" target="_blank">neptune</a></li>
+            <li data-text="sun"><a href="elkouah_abderrahmane/nav/earth.html" target="_blank">sun</a></li>
+            <li data-text="mercury"><a href="elkouah_abderrahmane/nav/mercury.html" target="_blank">mercury</a></li>
+            <li data-text="venus"><a href="elkouah_abderrahmane/nav/venus.html" target="_blank">venus</a></li>
+            <li data-text="earth"><a href="elkouah_abderrahmane/nav/earth.html" target="_blank">earth</a></li>
+            <li data-text="jupiter"><a href="elkouah_abderrahmane/nav/jupiter.html" target="_blank">jupiter</a></li>
+            <li data-text="saturn"><a href="elkouah_abderrahmane/nav/saturn.html" target="_blank">saturn</a></li>
+            <li data-text="uranus"><a href="elkouah_abderrahmane/nav/uranus.html" target="_blank">uranus</a></li>
+            <li data-text="neptune"><a href="elkouah_abderrahmane/nav/neptune.html" target="_blank">neptune</a></li>
         </ul>
     </nav>
 </body>
